copied over DataMatters 2020 content overwriting this repo versions

--- a/DataStructures.ipynb
+++ b/DataStructures.ipynb
@@ -10,6 +10,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "*To preserve the mystery, select from the notebook menus*\n",
+    "\n",
+    "`Edit -> Clear All Outputs`\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -156,9 +169,15 @@
    "source": [
     "---\n",
     "\n",
-    "## Spreadsheets?\n",
+    "## Spreadsheets? (Tabular data)\n",
     "\n",
-    "If we want to store something like a spreadsheet, where we have columns of data in a grid, how might we think of doing that?"
+    "Let's define spreadsheets as:\n",
+    "\n",
+    "- Data in a grid of columns and rows\n",
+    "- Within a column, all values have a consistent data type *(string, integer, floating point, boolean...)*\n",
+    "- Not all columns in a spreadsheet need to be the same data type\n",
+    "\n",
+    "**If we want to store something like a spreadsheet, how might we think of doing that in Python?**"
    ]
   },
   {
@@ -278,7 +297,7 @@
    "source": [
     "### Numpy arrays\n",
     "\n",
-    "For 2D arrays of values we can use Numpy arrays. That is getting us closer to a spreadsheet!"
+    "For 2D arrays of values we can use Numpy arrays. This is getting us closer to a spreadsheet!"
    ]
   },
   {
@@ -432,10 +451,10 @@
     "\n",
     "## Dictionary of lists or arrays would be a decent idea for a spreadsheet\n",
     "\n",
-    "To store columns of mixed types of data, like our typical spreadsheets, what would be ideal is to have columns stored in dictionaries, so we can access them by the column name, then the values would be stored in lists or arrays so we can do math and have easy access.\n",
+    "**This is really starting to look more like a spreadsheet because now we have column names, and the columns don't need to be of the same type!** The lists or arrays allow us to do easy math down the columns.\n",
     "\n",
     "- dictionary key is the column name\n",
-    "- value is a list or array holding our rows of values, including Nulls or NaNs"
+    "- dictionary value is a list or array holding our rows of values, including Nulls or NaNs"
    ]
   },
   {
@@ -457,9 +476,9 @@
     }
    ],
    "source": [
-    "dict_of_arrays = {'name':np.array(['bernice','jinyue','haim']),\n",
-    "                  'level':np.array([1,2,3]), \n",
-    "                  'grade':np.array([2.9,3.8,np.nan])}\n",
+    "dict_of_arrays = {'name':np.array(['bernice', 'jinyue', 'haim']),\n",
+    "                  'level':np.array([1, 2, 3]), \n",
+    "                  'grade':np.array([2.9, 3.8, np.nan])}\n",
     "dict_of_arrays"
    ]
   },
@@ -469,12 +488,14 @@
    "source": [
     "### But math is slightly complicated on a dictionary of lists or arrays\n",
     "\n",
-    "- If we want to do math down the columns we have to\n",
+    "- If we want to do math down all the columns we have to\n",
     "    - iterate through columns\n",
     "    - deal with non-numeric types\n",
-    "- across the rows is impossible in this form\n",
+    "- across the rows is can't be done directly in this form\n",
     "- there is nothing to guarantee alignment of the values into rows\n",
-    "- NaN screws up stats like sum and mean"
+    "    - *if you sort one column, the rest don't get sorted at the same time!*\n",
+    "    - *if you add a new column, you need to be very careful that the rows are in the same order!*\n",
+    "- NaNs (nulls) screw up stats like sum and mean"
    ]
   },
   {
@@ -508,7 +529,7 @@
     "\n",
     "In a dictionary of arrays it's easy to access a single column thorugh the \"column name\", which is the dictionary key, but with a spreadsheet we often want to access a certain row, based on one of the row values.\n",
     "\n",
-    "For example, if you want to see all of Jinyue's information, you have to\n",
+    "**For example, if you want to see all of Jinyue's information, you have to**\n",
     "\n",
     "- Find the index of the \"name\" array corresponding to Jinyue\n",
     "- Grab the value from that index in all arrays and pair it with the column name"
@@ -551,14 +572,11 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'name': 'jinyue', 'level': 2, 'grade': 3.8}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'jinyue', 'level': 2, 'grade': 3.8}\n"
+     ]
     }
    ],
    "source": [
@@ -566,7 +584,9 @@
     "                 {'name': 'jinyue', 'level': 2, 'grade': 3.8},\n",
     "                 {'name': 'haim', 'level': 3, 'grade': np.nan}]\n",
     "\n",
-    "list_of_dicts[ind]"
+    "for l in list_of_dicts:\n",
+    "    if l['name']=='jinyue':\n",
+    "        print(l)"
    ]
   },
   {
@@ -602,19 +622,19 @@
    "source": [
     "---\n",
     "\n",
-    "## Pandas DataFrame is sort of like a more flexible dictionary of arrays (or array of dictionaries)\n",
+    "## Pandas DataFrame is sort of like a more flexible and efficient dictionary of arrays (or array of dictionaries)\n",
     "\n",
-    "### Data Structures [[ref]](https://pandas.pydata.org/pandas-docs/stable/getting_started/overview.html)\n",
+    "### Pandas Data Structures [[ref]](https://pandas.pydata.org/pandas-docs/stable/getting_started/overview.html)\n",
     "\n",
     "- **Series**\t1D labeled homogeneously-typed array\n",
-    "    - Container for scalars or strings\n",
-    "    - Each one has an index and potentially a name\n",
+    "    - Container for scalars (numbers), strings, or booleans (True/False)\n",
+    "    - Each Series has an Index (names for all entries) and potentially an overall name\n",
     "    - Based on a Numpy array [[ref]](https://medium.com/@ericvanrees/pandas-series-objects-and-numpy-arrays-15dfe05919d7)\n",
-    "- **DataFrame**\tGeneral 2D labeled, size-mutable tabular structure with potentially heterogeneously-typed column\n",
+    "- **DataFrame**\tGeneral 2D labeled, size-mutable tabular structure with potentially heterogeneously-typed columns\n",
     "    - Container for Series\n",
-    "    - Overall index, and each Series (column) has a name\n",
+    "    - Overall Index, and each Series (column) has a name\n",
     "\n",
-    "When we print in a notebook you see the column names/labels along the top, and the \"index\", which are the row labels along the left-hand side."
+    "Printing a DataFrame in a notebook shows the column names/labels along the top, and the \"index\", which are the row labels along the left-hand side (here just sequential integers)."
    ]
   },
   {
@@ -692,7 +712,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And just so you can see that we could have created the DataFrame from the list of dictionaries just as easily"
+    "We could have created the DataFrame from the list of dictionaries just as easily"
    ]
   },
   {
@@ -771,11 +791,11 @@
    "source": [
     "### Access is easy on a DataFrame\n",
     "\n",
-    "Columns are each a Series with their own index, and we can access them by name so we don't make mistakes with integers\n",
+    "Columns are each a Series with their own Index, and we can access each element by name so we don't make mistakes with integers\n",
     "\n",
-    "- the index is like a row number in Excel, but more flexible and powerful\n",
-    "- if you don't specify an index when you create the DataFrame, Pandas will create an integer index by default\n",
-    "- **the index can be other types of identifiers like strings or dates**"
+    "- the Index is like a row number in Excel, but more flexible and powerful\n",
+    "- if you don't specify an Index when you create the DataFrame, Pandas will create an integer Index by default\n",
+    "- **the Index can be other types of identifiers like strings or dates**"
    ]
   },
   {
@@ -809,7 +829,7 @@
     "\n",
     "- Default is down columns\n",
     "- Strings are ignored or handled in a logical way\n",
-    "- NaN/Null is ignored rather than causing NaN"
+    "- NaNs/Nulls are ignored rather than leading to a NaN result"
    ]
   },
   {
@@ -1075,7 +1095,11 @@
     "\n",
     "When most of us learn programming, one of the most common methods we learn (besides if/then statements) are loops.\n",
     "\n",
-    "If you find yourself **iterating through the elements** (rows or columns) of a DataFrame, there's a good chance you're doing something **much slower and more complicated** than it needs to be! *I hardly ever need to loop through a DataFrame!*"
+    "If you find yourself **iterating through the elements** (rows or columns) of a DataFrame, there's a good chance you're doing something **much slower and more complicated** than it needs to be! ***I hardly ever need to loop through a DataFrame!***\n",
+    "\n",
+    "*Note that if we assign to a column name that doesn't exist, Pandas will just create a new column*\n",
+    "\n",
+    "#### String functions on columns"
    ]
   },
   {
@@ -1151,6 +1175,13 @@
    "source": [
     "df['NAME'] = df['name'].str.upper()\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Math on combinations of columns"
    ]
   },
   {
@@ -1230,6 +1261,13 @@
    "source": [
     "df['level_grade'] = df['level']/df['grade']\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Filling nulls with values"
    ]
   },
   {
@@ -1313,6 +1351,13 @@
    "source": [
     "df['grade_filled'] = df['grade'].fillna(df['grade'].mean())\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Boolean comparisons between columns"
    ]
   },
   {
@@ -1406,7 +1451,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Series and DataFrame indices are automatically aligned"
+    "## Series and DataFrame indices are automatically aligned\n",
+    "\n",
+    "Both rows and columns in Pandas are ordered (unlike dictionaries), and that order doesn't need to be numerical or alphabetical in either the column or row indexes."
    ]
   },
   {
@@ -1431,6 +1478,15 @@
    "source": [
     "sd = pd.Series(index=[2,0,1], data=['third','first','second'])\n",
     "sd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Assigning our new Series as a column in our DataFrame matches on the index\n",
+    "\n",
+    "*Warning: entries that don't have a matching index value in the DataFrame will be dropped! (There are ways to get around this.)*"
    ]
   },
   {
@@ -1533,31 +1589,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `.dropna()` – Drop rows with NAs\n",
+    "## Easy to drop rows with NAs\n",
     "\n",
-    "```\n",
-    "df.dropna(axis=0, how='any', thresh=None, subset=None, inplace=False)\n",
+    "[.dropna() documentation](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.dropna.html)\n",
     "\n",
-    "Parameters\n",
-    "----------\n",
-    "axis : {0 or 'index', 1 or 'columns'}, default 0\n",
-    "    Determine if rows or columns which contain missing values are removed.\n",
-    "    * 0, or 'index' : Drop rows which contain missing values.\n",
-    "    * 1, or 'columns' : Drop columns which contain missing value.\n",
-    "\n",
-    "how : {'any', 'all'}, default 'any'\n",
-    "    Determine if row or column is removed from DataFrame, when we have at least one NA or all NA.\n",
-    "    * 'any' : If any NA values are present, drop that row or column.\n",
-    "    * 'all' : If all values are NA, drop that row or column.\n",
-    "\n",
-    "thresh : int, optional\n",
-    "    Require that many non-NA values.\n",
-    "subset : array-like, optional\n",
-    "    Labels along other axis to consider, e.g. if you are dropping rows\n",
-    "    these would be a list of columns to include.\n",
-    "inplace : bool, default False\n",
-    "    If True, do operation inplace and return None.\n",
-    "```\n",
+    "Many options, including drop any row that has an NA, specify certain columns, or a threshold number of NAs to tolerate.\n",
     "\n",
     "*Here we're not going to make the change in place, but just see what the DataFrame looks like with the NAs dropped.*"
    ]
@@ -1648,6 +1684,162 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Also easy to drop duplicates\n",
+    "\n",
+    "[.drop_duplicates() documentation](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.drop_duplicates.html)\n",
+    "\n",
+    "Many options here, too, including subsets of columns to consider and which row instance to keep."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col1</th>\n",
+       "      <th>col2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>a</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>b</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>c</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>a</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>b</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  col1  col2\n",
+       "0    a     1\n",
+       "1    b     2\n",
+       "2    c     3\n",
+       "3    a     1\n",
+       "4    b     2"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_dup = pd.DataFrame({'col1':['a','b','c','a','b'],'col2':[1,2,3,1,2]})\n",
+    "df_dup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col1</th>\n",
+       "      <th>col2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>a</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>b</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>c</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  col1  col2\n",
+       "0    a     1\n",
+       "1    b     2\n",
+       "2    c     3"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_dup.drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "\n",
     "## Pandas Essential Basic Functionality\n",
@@ -1692,7 +1884,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
