--- a/MergeExerciseSolutions.ipynb
+++ b/MergeExerciseSolutions.ipynb
@@ -288,8 +288,8 @@
     "\n",
     "- **Consider the Demographics table to be our primary table on the Left**\n",
     "- **Do a LEFT JOIN using `merge()` with the Responses table**\n",
-    "- Explicitly state the key field `on=` which to merge\n",
-    "- Assign that to a variable called demog_resp"
+    "- Explicitly state the key field / variable on which to merge using `on=`\n",
+    "- Assign the result of the merge to a variable called demog_resp"
    ]
   },
   {
@@ -406,8 +406,8 @@
     "\n",
     "- **Now consider the demog_resp table to be our primary table on the Left**\n",
     "- **Do a LEFT JOIN using `merge()` with the Questions table**\n",
-    "- Explicitly state the key field `on=` which to merge\n",
-    "- Assign that to a variable called demog_resp_ques"
+    "- Explicitly state the key field / variable on which to merge using `on=`\n",
+    "- Assign the result to a variable called demog_resp_ques"
    ]
   },
   {
@@ -573,7 +573,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
