--- a/TidyDataIntro.ipynb
+++ b/TidyDataIntro.ipynb
@@ -13,7 +13,18 @@
     "Based on [Tidy Data](http://vita.had.co.nz/papers/tidy-data.html), by Hadley Wickham  \n",
     "*The Journal of Statistical Software, vol. 59, 2014.*\n",
     "\n",
-    "Download: [pre-print](http://vita.had.co.nz/papers/tidy-data.pdf) | [from publisher](http://www.jstatsoft.org/v59/i10/)\n",
+    "Download: [pre-print](http://vita.had.co.nz/papers/tidy-data.pdf) | [from publisher](http://www.jstatsoft.org/v59/i10/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "*To preserve the mystery, select from the notebook menus*\n",
+    "\n",
+    "`Edit -> Clear All Outputs`\n",
     "\n",
     "---"
    ]
@@ -41,9 +52,9 @@
    "source": [
     "### Typical sample data – two experimental conditions\n",
     "\n",
-    "In this workshop we will mostly load data in from commma-separated value (CSV) files, but here I will use one of the many methods to create them manually, just so you've seen an example.\n",
+    "We have three people (rows) and their results (in columns) from two different treatments.\n",
     "\n",
-    "We have three people (rows) and their results (in columns) from two different treatments."
+    "*This is similar to the data arrangement we had for the percent of women in bachelor's degree categories – there with years as the index and categories as the column headers.*"
    ]
   },
   {
@@ -345,7 +356,7 @@
     {
      "data": {
       "text/plain": [
-       "33.0"
+       "6.6"
       ]
      },
      "execution_count": 5,
@@ -354,7 +365,7 @@
     }
    ],
    "source": [
-    "df2['result'].sum()"
+    "df2['result'].mean()"
    ]
   },
   {
@@ -368,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -423,7 +434,7 @@
        "b          4.666667"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,8 +485,8 @@
     {
      "data": {
       "text/plain": [
-       "a    3\n",
        "b    3\n",
+       "a    3\n",
        "Name: treatment, dtype: int64"
       ]
      },
@@ -492,9 +503,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
     "## A new way to think about the data\n",
     "\n",
-    "The dataset contains 18 values representing 3 variables and 6 observations\n",
+    "The dataset contains **18 values** representing **3 variables** and **6 observations**\n",
     "\n",
     "1. **person**, with three possible values (John, Mary and Jane)\n",
     "2. **treatment**, with two possible values (a and b)\n",
