--- a/Groupby_Basics.ipynb
+++ b/Groupby_Basics.ipynb
@@ -44,8 +44,8 @@
     "As Jake VanderPlas shows in the \n",
     "[Aggregation and Grouping](http://nbviewer.jupyter.org/github/jakevdp/PythonDataScienceHandbook/blob/master/notebooks/03.08-Aggregation-and-Grouping.ipynb) \n",
     "section of his excellent \n",
-    "[Python Data Science Handbook](https://github.com/jakevdp/PythonDataScienceHandbook)\n",
-    ", an archtypical example of a `groupby()` operation with a sum aggregation is:\n",
+    "[Python Data Science Handbook](https://github.com/jakevdp/PythonDataScienceHandbook), \n",
+    "an archtypical example of a `groupby()` operation with a sum aggregation is:\n",
     "\n",
     "<img src='images/split-apply-combine.svg' width=600>"
    ]
@@ -188,7 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The operation creates a GroupBy object"
+    "### The `.groupby()` operation returns a groupby object"
    ]
   },
   {
@@ -199,7 +199,7 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7fe9e86d8e50>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7fd04004e1c0>"
       ]
      },
      "execution_count": 3,
@@ -245,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We can access the groups if we need to"
+    "### We can access the groups"
    ]
   },
   {
@@ -322,11 +322,11 @@
     "\n",
     "There are a few different variations of the aggregate syntax. The excellent blog post \n",
     "[Minimally Sufficient Pandas](https://medium.com/dunder-data/minimally-sufficient-pandas-a8e67f2a2428) \n",
-    "by Ted Petrou talks about the trade-offs. I will first show you a shortcut method, but in general I try to follow his suggestions for preferred syntax.\n",
+    "by Ted Petrou talks about the trade-offs. Later I will show you a shortcut method, but in general I try to follow his suggestions for preferred syntax.\n",
     "\n",
     "- `.agg()` is just short for `.aggregate()` and is fine to use\n",
-    "- **Aggregate results in a single combined row for each group**\n",
-    "- **You can specify multiple statistical functions at once with a list**\n",
+    "- **The aggregate method returns a DataFrame with a single combined row for each group**\n",
+    "- You can specify multiple statistical functions at once with a list\n",
     "\n",
     "Some [descriptive statistics are built into Pandas](https://pandas.pydata.org/pandas-docs/stable/user_guide/basics.html#descriptive-statistics) and it's easy to import Numpy and use functions from there, too."
    ]
@@ -588,7 +588,7 @@
    "source": [
     "### Multi-index is selected by a tuple\n",
     "\n",
-    "*Note: We'll cover this further in Groupy_NCexploration. It's the same situation if a groupby() returns a multi-index in the rows.**"
+    "We'll cover this further in Groupy_NCexploration. It's the same situation if a groupby() returns a multi-index in the rows."
    ]
   },
   {
@@ -704,7 +704,7 @@
     "\n",
     "#### This \"function name only\" shortcut syntax is not recommended\n",
     "\n",
-    "But you may see it around, and it does work fine for a quick result"
+    "But you may see it around, and it does work fine for a quick result. The aggregation function is applied to all the numeric columns."
    ]
   },
   {
@@ -888,7 +888,7 @@
    "source": [
     "## EXERCISE\n",
     "\n",
-    "**Use the preferred syntax to find the maximum and minimum simultaneously on only the data2 column**\n",
+    "**Use the preferred syntax to find the maximum and minimum simultaneously on only the data2 column within the \"key\" groups**\n",
     "\n",
     "*Note: Type instead of using copy/paste for better retention*"
    ]
@@ -922,7 +922,7 @@
     "- Applies a function to each of the groups\n",
     "- Only a single function is allowed – it will be applied to all the columns\n",
     "- **Doesn't change the number of rows from the original!**\n",
-    "- *Notice that we lost the 'key' column, but we retain the Index!*"
+    "- *Notice that we lost the 'key' column, but we retain the original Index!*"
    ]
   },
   {
@@ -1281,7 +1281,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCISE: Transform group data2 minimum into a new `data2_min` column\n",
+    "## EXERCISE\n",
+    "\n",
+    "**Transform the \"key\" group data2 minimums into a new `data2_min` column**\n",
     "\n",
     "*Note: Type instead of using copy/paste for better retention*"
    ]
@@ -1306,7 +1308,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCISE: Return the rows where data2 value == data2 minimum"
+    "## EXERCISE\n",
+    "\n",
+    "**Return the rows where data2 value == data2 minimum**"
    ]
   },
   {
@@ -1338,12 +1342,12 @@
    "source": [
     "## Filter – remove groups based on conditional function results\n",
     "\n",
-    "Just a quick example of filtering after groupby. Here's a reminder of the group stats."
+    "Just a quick example of filtering after groupby. Here's a reminder of the \"key\" group stats."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1399,7 +1403,7 @@
        "C     0.45"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1418,7 +1422,100 @@
     "- **You are defining what should pass through the filter!**\n",
     "- You get back the original DataFrame only including the rows that made it through the filter\n",
     "\n",
-    "I always find lambda functions a little awkward, but it is handy to be able to define a function in-place. `x` will represent a DataFrame after grouping in this case."
+    "#### Using a lambda function in the filter\n",
+    "\n",
+    "I always find lambda functions a little awkward, but it is handy to be able to define a function in-place. `x` will represent a DataFrame after the groupby operation in this case."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>key</th>\n",
+       "      <th>data1</th>\n",
+       "      <th>data2</th>\n",
+       "      <th>data1_mean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>C</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>B</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>C</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  key  data1  data2  data1_mean\n",
+       "1   B      4    0.2           7\n",
+       "2   C      6    0.3           9\n",
+       "4   B     10    0.5           7\n",
+       "5   C     12    0.6           9"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('key').filter(lambda x: x['data2'].mean() > 0.3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Defining the filter function separately\n",
+    "\n",
+    "The alternative to using a lambda function would have been to first define a function that takes a DataFrame and returns a boolean True/False value, and then pass it to the `.filter()` method"
    ]
   },
   {
@@ -1451,7 +1548,6 @@
        "      <th>data1</th>\n",
        "      <th>data2</th>\n",
        "      <th>data1_mean</th>\n",
-       "      <th>data2_min</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1461,7 +1557,6 @@
        "      <td>4</td>\n",
        "      <td>0.2</td>\n",
        "      <td>7</td>\n",
-       "      <td>0.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1469,7 +1564,6 @@
        "      <td>6</td>\n",
        "      <td>0.3</td>\n",
        "      <td>9</td>\n",
-       "      <td>0.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1477,7 +1571,6 @@
        "      <td>10</td>\n",
        "      <td>0.5</td>\n",
        "      <td>7</td>\n",
-       "      <td>0.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1485,18 +1578,17 @@
        "      <td>12</td>\n",
        "      <td>0.6</td>\n",
        "      <td>9</td>\n",
-       "      <td>0.3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  key  data1  data2  data1_mean  data2_min\n",
-       "1   B      4    0.2           7        0.2\n",
-       "2   C      6    0.3           9        0.3\n",
-       "4   B     10    0.5           7        0.2\n",
-       "5   C     12    0.6           9        0.3"
+       "  key  data1  data2  data1_mean\n",
+       "1   B      4    0.2           7\n",
+       "2   C      6    0.3           9\n",
+       "4   B     10    0.5           7\n",
+       "5   C     12    0.6           9"
       ]
      },
      "execution_count": 20,
@@ -1505,15 +1597,11 @@
     }
    ],
    "source": [
-    "df.groupby('key').filter(lambda x: x['data2'].mean() > 0.3)"
+    "def pass_high_mean(x):\n",
+    "    return x['data2'].mean() > 0.3\n",
+    "\n",
+    "df.groupby('key').filter(pass_high_mean)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1532,7 +1620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
