--- a/MeltExerciseSolutions.ipynb
+++ b/MeltExerciseSolutions.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "Problem: \n",
     "\n",
-    "- The columns headers are composed of the possible income values."
+    "- The columns headers are composed of the possible income range values."
    ]
   },
   {
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Read in the data\n",
+    "### Read in the data\n",
     "\n",
     "- Read data in from the CSV file `pew-raw.csv` in the `data` directory, \n",
     "- and print out the table"
@@ -230,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Pivot/melt\n",
+    "### Pivot/melt\n",
     "\n",
     "- Pivot/melt every column except for `religion`,\n",
     "- make a new column called `\"income\"` based on the old column headers\n",
@@ -247,14 +247,14 @@
    },
    "outputs": [],
    "source": [
-    "formatted_df = df.melt([\"religion\"], var_name=\"income\", value_name=\"freq\")"
+    "tidy_df = df.melt([\"religion\"], var_name=\"income\", value_name=\"freq\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Sort temporarily\n",
+    "### Sort temporarily\n",
     "\n",
     "- Display the first 15 values, sorted by `religion`\n",
     "- *Don't actually permanently sort the DataFrame yet!*"
@@ -415,7 +415,7 @@
     }
    ],
    "source": [
-    "formatted_df.sort_values(by=[\"religion\"]).head(15)"
+    "tidy_df.sort_values(by=[\"religion\"]).head(15)"
    ]
   },
   {
@@ -581,10 +581,10 @@
     }
    ],
    "source": [
-    "formatted_df = formatted_df.sort_values(by=[\"freq\"], ascending=False)\n",
+    "tidy_sorted_df = tidy_df.sort_values(by=[\"freq\"], ascending=False)\n",
     "\n",
     "# display the results\n",
-    "formatted_df.head(15)"
+    "tidy_sorted_df.head(15)"
    ]
   }
  ],
@@ -604,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
