--- a/MeltIntro.ipynb
+++ b/MeltIntro.ipynb
@@ -8,12 +8,34 @@
     }
    },
    "source": [
-    "# Column headers are values, not variable names\n",
+    "## Column headers are values, not variable names\n",
     "\n",
-    "*This is one of the more common data manipulations to get to a tidy form!*\n",
+    "*This is one of the more common manipulations to get data into a tidy form!*\n",
     "\n",
-    "For example, many government data sets are in a format which is **good for visual lookup, but not for analysis and exploration**, with measurements in various years spread across multiple columns.\n",
+    "For example, many government data sets are in a format which is **good for visual lookup, but not for analysis and exploration**, with measurements in various years spread across multiple columns."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
     "\n",
+    "*To preserve the mystery, select from the notebook menus*\n",
+    "\n",
+    "`Edit -> Clear All Outputs`\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### A toy example – years as column headers\n",
     "\n",
     "Let's define a simple, small DataFrame with that structure:"
@@ -127,19 +149,24 @@
     "- In the R `tidyr` package this is a \"gather\"\n",
     "- In OpenRefine it's a \"Transpose->Transpose cells across columns into rows...\" operation\n",
     "- In Tableau this is called a \"Pivot\"\n",
-    "- Many call this process \"un-pivoting\", since a *Pivot Table* in Excel converts data in the opposite direction, from the *tall* format into *wide*. \n"
+    "- Many call this process \"un-pivoting\", since a *Pivot Table* in Excel (and Pandas, actually) converts data in the opposite direction, from the *tall* format into *wide*. \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Minimally, for a `melt()` you need to specify \n",
+    "### To `.melt()` you need to minimally supply the id_vars\n",
     "\n",
-    "- a list of the columns which **don't** get \"un-pivoted\" – *these values will get repeated*.\n",
-    "- **all of the rest of the columns will get melted / un-pivoted**\n",
+    "The argument name for the list of columns that don't get melted is `id_vars`. This argument is the default, so you can choose to leave out the `id_vars=`, but it's not a bad idea in your code to spell this out explicitly. \n",
     "\n",
-    "*Notice that the column headers by default end up in a column called \"variable\", and the table body values end up in a column called \"value\".*"
+    "- The `id_vars` \"identify\" the rest of the columns in each original row. **They are the IDs, or the key fields, which uniquely identify the rows in the original table.**\n",
+    "- All the rest of the columns will get melted / un-pivoted\n",
+    "\n",
+    "*Notice that*\n",
+    "\n",
+    "- *the column headers by default end up in a column called \"variable\"*\n",
+    "- *the table body values end up in a column called \"value\"*"
    ]
   },
   {
@@ -251,130 +278,6 @@
     }
    ],
    "source": [
-    "df2 = df.melt(['state'])\n",
-    "df2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Slighly more explicitly: id_vars\n",
-    "\n",
-    "The argument name for the list of columns that don't get melted is `id_vars`. This argument is the default if you don't use its name, as above, but it's not a bad idea in your code to spell this out explicitly. \n",
-    "\n",
-    "The `id_vars` \"identify\" the rest of the columns in each original row. **They are the IDs, or the key fields, which uniquely identify the rows in the original table.**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>state</th>\n",
-       "      <th>variable</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Maine</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Alaska</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Ohio</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Maine</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Alaska</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Ohio</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Maine</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Alaska</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Ohio</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    state variable  value\n",
-       "0   Maine     2009      1\n",
-       "1  Alaska     2009      2\n",
-       "2    Ohio     2009      3\n",
-       "3   Maine     2010      4\n",
-       "4  Alaska     2010      5\n",
-       "5    Ohio     2010      6\n",
-       "6   Maine     2011      7\n",
-       "7  Alaska     2011      8\n",
-       "8    Ohio     2011      9"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "df2 = df.melt(id_vars=['state'])\n",
     "df2"
    ]
@@ -385,12 +288,12 @@
    "source": [
     "### Or just specify the columns to be melted\n",
     "\n",
-    "If you don't want to keep any ID columns, and just melt a few, you can just specify the value columns to melt."
+    "**If you don't want to keep any ID columns**, and just melt a few, you can just specify the value columns to melt."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +384,7 @@
        "8     2011      9"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +510,7 @@
        "8    Ohio  2011       9"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +518,8 @@
    "source": [
     "df2 = df.melt(id_vars=['state'], \n",
     "              value_vars=['2009','2010','2011'], \n",
-    "              var_name='year', value_name='number')\n",
+    "              var_name='year', \n",
+    "              value_name='number')\n",
     "df2"
    ]
   },
@@ -623,13 +527,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sort the DataFrame\n",
+    "---\n",
+    "\n",
+    "## Sorting a DataFrame\n",
     "\n",
     "You can sort the rows of a DataFrame according to any column, or ordered combination of columns.\n",
     "\n",
     "- **The results won't be saved unless you do it with `inplace=True` or assign the results of the sort to a variable!**\n",
     "- Sometimes this is useful to just inspect a DataFrame in a certain sort order, when you don't really need to save the results.\n",
-    "- Notice that the default is to sort in \"ascending\" order, or `ascending=True`\n"
+    "- Notice that the default is to sort in \"ascending\" order, or `ascending=True`. \n",
+    "- To get descending, you need to specify `ascending=False`.\n",
+    "\n",
+    "*Notice that the Index doesn't get regenerated in the new sorted order by default. This is so you can do something like add another column from a Series and things won't be messed up just because you sorted the main DataFrame first!*\n"
    ]
   },
   {
@@ -748,7 +657,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### See, it displayed, but didn't really get saved!"
+    "#### See, it displayed `df2` in the sorted order above, but the sort didn't really get saved!"
    ]
   },
   {
@@ -1129,7 +1038,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
