--- a/MergeDatasets.ipynb
+++ b/MergeDatasets.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "It is very common to want to bring in some extra data from a second table and add it to our primary table.\n",
     "\n",
-    "- Our primary table was prepared in tidy form and saved to a CSV file in the [SplitExplodeLists](SplitExplodeLists.ipynb) notebook. It has people and the states they've lived in.\n",
+    "- Our primary table was prepared in tidy form and saved to a CSV file in the SplitExplodeLists.ipynb notebook within my more complete [pandas-jupyterlab](https://github.com/emonson/pandas-jupyterlab) repository. It has people and the states they've lived in.\n",
     "- The second table we'll load from the second sheet in an Excel workbook. It contains populations of states.\n",
     "\n",
     "### This is the Pandas equivalent of an SQL JOIN command!"
@@ -18,7 +18,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load tidy data as main table\n"
+    "---\n",
+    "\n",
+    "*To preserve the mystery, select from the notebook menus*\n",
+    "\n",
+    "`Edit -> Clear All Outputs`\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load people/states tidy data as main table\n"
    ]
   },
   {
@@ -32,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -62,57 +75,57 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>Bobby</td>\n",
        "      <td>Wyoming</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>Bobby</td>\n",
        "      <td>Michigan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>Sue</td>\n",
        "      <td>Wisconsin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>Sue</td>\n",
        "      <td>Nevada</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>Sue</td>\n",
        "      <td>California</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5</td>\n",
+       "      <th>5</th>\n",
        "      <td>Tamika</td>\n",
        "      <td>Florida</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>6</td>\n",
+       "      <th>6</th>\n",
        "      <td>Tamika</td>\n",
        "      <td>Washington</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>7</td>\n",
+       "      <th>7</th>\n",
        "      <td>Cale</td>\n",
        "      <td>South Dakota</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>8</td>\n",
+       "      <th>8</th>\n",
        "      <td>Iris</td>\n",
        "      <td>Washington</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>9</td>\n",
+       "      <th>9</th>\n",
        "      <td>Iris</td>\n",
        "      <td>Oregon</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>10</td>\n",
+       "      <th>10</th>\n",
        "      <td>Iris</td>\n",
        "      <td>California</td>\n",
        "    </tr>\n",
@@ -135,7 +148,7 @@
        "10    Iris    California"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,12 +164,14 @@
    "source": [
     "## Load state level data to join to our main table\n",
     "\n",
-    "*Note here how we specify the sheet name since the table we want isn't the first sheet in the Excel workbook.*"
+    "**Note here how we specify the sheet name since the table we want isn't the first sheet in the Excel workbook.** Reading from an Excel file requires the XLRD module, which should be installed by default with the Anaconda Python distribution.\n",
+    "\n",
+    "*Notice that this table also has a \"state\" variable, which we'll use as the \"key\" to join the two.*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -187,43 +202,43 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>43</td>\n",
+       "      <th>43</th>\n",
        "      <td>Montana</td>\n",
        "      <td>989417</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>44</td>\n",
+       "      <th>44</th>\n",
        "      <td>Delaware</td>\n",
        "      <td>897936</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>45</td>\n",
+       "      <th>45</th>\n",
        "      <td>South Dakota</td>\n",
        "      <td>814191</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>46</td>\n",
+       "      <th>46</th>\n",
        "      <td>North Dakota</td>\n",
        "      <td>672591</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>47</td>\n",
+       "      <th>47</th>\n",
        "      <td>Alaska</td>\n",
        "      <td>710249</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>48</td>\n",
+       "      <th>48</th>\n",
        "      <td>Vermont</td>\n",
        "      <td>625745</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>49</td>\n",
+       "      <th>49</th>\n",
        "      <td>Wyoming</td>\n",
        "      <td>563767</td>\n",
        "      <td>1</td>\n",
@@ -243,13 +258,13 @@
        "49       Wyoming           563767            1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "state_pop = pd.read_excel('./data/PeopleStates.xlsx', sheet_name='Sheet2')\n",
+    "state_pop = pd.read_excel('data/PeopleStates.xlsx', sheet_name='Sheet2')\n",
     "state_pop.tail(7)"
    ]
   },
@@ -259,11 +274,16 @@
    "source": [
     "## LEFT JOIN\n",
     "\n",
-    "We'll do a LEFT JOIN by using the `merge()` function, specifying which DataFrame is on the \"left\" and which is on the \"right\" for the JOIN. It's just the order in which you list them as the first two arguments to `merge()`.\n",
+    "We'll do a LEFT JOIN by using the `merge()` function. There are a few variants of the same command that are all equivalent:\n",
     "\n",
-    "*(Note: For more details on JOIN types, see the [JoinTypes notebook](JoinTypes.ipynb).)*\n",
+    "```\n",
+    "result_df = pd.merge(left_df, right_df, how='left', on='state')\n",
+    "result_df = left_df.merge(right_df, how='left', on='state')\n",
+    "```\n",
     "\n",
-    "We also need to specify which column contains the ID fields / keys to join on. We put these in the \"left_on\" and \"right_on\" arguments."
+    "If the variable you want to join on, sometimes called the \"key\" field, has different names in each table, instead of `on=` you can specify `left_on=` and `right_on=`.\n",
+    "\n",
+    "*(Note: For more details on JOIN types, see the [JoinTypes notebook](JoinTypes.ipynb).)*"
    ]
   },
   {
@@ -300,77 +320,77 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>Bobby</td>\n",
        "      <td>Wyoming</td>\n",
        "      <td>563767</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>Bobby</td>\n",
        "      <td>Michigan</td>\n",
        "      <td>9884129</td>\n",
        "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>Sue</td>\n",
        "      <td>Wisconsin</td>\n",
        "      <td>5687289</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>Sue</td>\n",
        "      <td>Nevada</td>\n",
        "      <td>2700691</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>Sue</td>\n",
        "      <td>California</td>\n",
        "      <td>37254503</td>\n",
        "      <td>53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5</td>\n",
+       "      <th>5</th>\n",
        "      <td>Tamika</td>\n",
        "      <td>Florida</td>\n",
        "      <td>18804623</td>\n",
        "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>6</td>\n",
+       "      <th>6</th>\n",
        "      <td>Tamika</td>\n",
        "      <td>Washington</td>\n",
        "      <td>6724543</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>7</td>\n",
+       "      <th>7</th>\n",
        "      <td>Cale</td>\n",
        "      <td>South Dakota</td>\n",
        "      <td>814191</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>8</td>\n",
+       "      <th>8</th>\n",
        "      <td>Iris</td>\n",
        "      <td>Washington</td>\n",
        "      <td>6724543</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>9</td>\n",
+       "      <th>9</th>\n",
        "      <td>Iris</td>\n",
        "      <td>Oregon</td>\n",
        "      <td>3831073</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>10</td>\n",
+       "      <th>10</th>\n",
        "      <td>Iris</td>\n",
        "      <td>California</td>\n",
        "      <td>37254503</td>\n",
@@ -409,9 +429,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sort by values\n",
+    "---\n",
     "\n",
-    "Then, we'll sort the rows \"descending\" and \"in place\" by the populatin column."
+    "## Drop unwanted columns\n",
+    "\n",
+    "There are two alternative ways to specify rows or columns to drop:\n",
+    "\n",
+    "- The older style, which I don't like as much, is to specify row or column labels, and then the \"axis\" along which to drop ({0 or ‘index’, 1 or ‘columns’}, default 0)\n",
+    "- **The way I prefer, because it's easier for me to read, is to specify `rows=` or `columns=` and then the labels I want to drop as a list**\n",
+    "- As with `.sort_values()` and many other operations, you need to remember to either reassign to a variable, or include `inplace=True`"
    ]
   },
   {
@@ -443,104 +469,92 @@
        "      <th>name</th>\n",
        "      <th>state</th>\n",
        "      <th>population_2010</th>\n",
-       "      <th>house_seats</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>Sue</td>\n",
-       "      <td>California</td>\n",
-       "      <td>37254503</td>\n",
-       "      <td>53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>10</td>\n",
-       "      <td>Iris</td>\n",
-       "      <td>California</td>\n",
-       "      <td>37254503</td>\n",
-       "      <td>53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5</td>\n",
-       "      <td>Tamika</td>\n",
-       "      <td>Florida</td>\n",
-       "      <td>18804623</td>\n",
-       "      <td>27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>Bobby</td>\n",
-       "      <td>Michigan</td>\n",
-       "      <td>9884129</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6</td>\n",
-       "      <td>Tamika</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>6724543</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>8</td>\n",
-       "      <td>Iris</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>6724543</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>Sue</td>\n",
-       "      <td>Wisconsin</td>\n",
-       "      <td>5687289</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>9</td>\n",
-       "      <td>Iris</td>\n",
-       "      <td>Oregon</td>\n",
-       "      <td>3831073</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>Sue</td>\n",
-       "      <td>Nevada</td>\n",
-       "      <td>2700691</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7</td>\n",
-       "      <td>Cale</td>\n",
-       "      <td>South Dakota</td>\n",
-       "      <td>814191</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>Bobby</td>\n",
        "      <td>Wyoming</td>\n",
        "      <td>563767</td>\n",
-       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bobby</td>\n",
+       "      <td>Michigan</td>\n",
+       "      <td>9884129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Sue</td>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>5687289</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sue</td>\n",
+       "      <td>Nevada</td>\n",
+       "      <td>2700691</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Sue</td>\n",
+       "      <td>California</td>\n",
+       "      <td>37254503</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Tamika</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>18804623</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Tamika</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>6724543</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Cale</td>\n",
+       "      <td>South Dakota</td>\n",
+       "      <td>814191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Iris</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>6724543</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Iris</td>\n",
+       "      <td>Oregon</td>\n",
+       "      <td>3831073</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Iris</td>\n",
+       "      <td>California</td>\n",
+       "      <td>37254503</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      name         state  population_2010  house_seats\n",
-       "4      Sue    California         37254503           53\n",
-       "10    Iris    California         37254503           53\n",
-       "5   Tamika       Florida         18804623           27\n",
-       "1    Bobby      Michigan          9884129           14\n",
-       "6   Tamika    Washington          6724543           10\n",
-       "8     Iris    Washington          6724543           10\n",
-       "2      Sue     Wisconsin          5687289            8\n",
-       "9     Iris        Oregon          3831073            5\n",
-       "3      Sue        Nevada          2700691            4\n",
-       "7     Cale  South Dakota           814191            1\n",
-       "0    Bobby       Wyoming           563767            1"
+       "      name         state  population_2010\n",
+       "0    Bobby       Wyoming           563767\n",
+       "1    Bobby      Michigan          9884129\n",
+       "2      Sue     Wisconsin          5687289\n",
+       "3      Sue        Nevada          2700691\n",
+       "4      Sue    California         37254503\n",
+       "5   Tamika       Florida         18804623\n",
+       "6   Tamika    Washington          6724543\n",
+       "7     Cale  South Dakota           814191\n",
+       "8     Iris    Washington          6724543\n",
+       "9     Iris        Oregon          3831073\n",
+       "10    Iris    California         37254503"
       ]
      },
      "execution_count": 5,
@@ -549,53 +563,8 @@
     }
    ],
    "source": [
-    "ps_tidy_pop.sort_values(by=['population_2010'], ascending=False, inplace=True)\n",
-    "ps_tidy_pop"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "# Saving table out to a CSV file\n",
-    "\n",
-    "Usually we can save to an Excel file, but we'd need to install another module\n",
-    "so, we'll save as CSV file for now, which is a very useful format.\n",
-    "\n",
-    "- It's good practice to specify the `encoding`, which is the method used for recording characters beyond the 256 ASCII character set. \n",
-    "- In this case we also don't need to save the `index` column to the file, so we'll turn that option off"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ps_tidy_pop.to_csv('./data/PeopleStates_Merged.csv', encoding='utf-8', index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Save to JSON\n",
-    "\n",
-    "Another option is to save as a JSON file. There are multiple \"orientations\":\n",
-    "[to_json docs](http://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.to_json.html)\n",
-    "\n",
-    "`records` orientation will make a list of rows, each an object/dictionary\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ps_tidy_pop.to_json('./data/PeopleStates_Merged.json', orient='records')"
+    "ps_tidy_final = ps_tidy_pop.drop(columns=['house_seats'])\n",
+    "ps_tidy_final"
    ]
   }
  ],
@@ -615,7 +584,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
