wording changes before spring 2022 pandas 101

--- a/DataStructures.ipynb
+++ b/DataStructures.ipynb
@@ -6,7 +6,29 @@
    "source": [
     "# Python basic data storage – towards spreadsheets\n",
     "\n",
-    "If we want to manipulate tablular data, like spreadsheets, in Python, what would be the natural data structures, and what problems does Pandas solve?"
+    "It may seem like a waste of time to go through this when I could just start showing you Pandas syntax, but **there were a lot of things that seemed really strange to me when I first learned Pandas. Perhaps if you see what problems Pandas avoids, it will make more sense why Pandas is built like it is.**\n",
+    "\n",
+    "The only spreadsheets I'd ever dealt with were in Excel, which has almost no constraints – you can type any value into any cell – but I didn't realize how that lack of constraints can cause problems.\n",
+    "\n",
+    "**I love Excel, it's very handy and I use it a lot, but it can be problematic in various ways:**\n",
+    "- Operations are not \"reproducible\"\n",
+    "    - there is no record of what you did to the data (editing, transforming, etc)\n",
+    "    - so you don't know what you did\n",
+    "    - and others don't know what you did\n",
+    "    - so you have to manually take notes to share with others\n",
+    "    - like when you publish your paper and others want to try to reproduce your work\n",
+    "    - it's not easy to apply the same manipulations to new data\n",
+    "    - or to a bunch of files containing the same types of data\n",
+    "- You're allowed to mix data types in a column, which can cause problems with analysis\n",
+    "- It's possible to sort one column and not sort the others\n",
+    "- When joining tables together:\n",
+    "    - copy/pasting new columns can result in misaligned rows\n",
+    "    - copy/pasting new rows can result in misaligned columns\n",
+    "    - joining based on a key column is supported, but formulas take a while to set up in each new case, and it's tedious to set up when joining mulitiple columns\n",
+    "- You can't do some common transformations like to pivot/melt/gather wide data into tall (tidy) data\n",
+    "- It's not Excel's fault, but few people learn how to use the super-useful/powerful Pivot Table functionality\n",
+    "\n",
+    "To help understand Pandas better, let's ask ourselves, **\"If we want to manipulate tablular data, like spreadsheets, in Python, what would be the natural data structures, and what problems does Pandas solve?\"** Along the way we'll review a few Python data structures, which will help us later, too."
    ]
   },
   {
@@ -26,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Let's review the two basic native Python data structures\n",
+    "## Let's review two basic native Python data containers\n",
     "\n",
     "*Note: there are more than these two, but **Lists** and **Dictionaries** are the two most common mutable (changable) data structures, and understanding them will help with understanding how Pandas data structures work, so they're worth a review.*"
    ]
@@ -119,8 +141,8 @@
    "source": [
     "#### List access – slicing a range of values\n",
     "\n",
-    "- we can use the `n:m` \"slice\" notation to access a sequence (which remains a list)\n",
-    "- notice the returned `n:m` slice starts with `n` but ends with `m-1`\n",
+    "- we can use the `m:n` \"slice\" notation to access a sequence (which remains a list)\n",
+    "- notice the returned `m:n` slice starts with `m` but ends with `n-1`\n",
     "- if you leave out the beginning or ending index the slice goes all the way from the beginning or end\n",
     "- the `:` by itself returns all elements"
    ]
@@ -408,12 +430,20 @@
    "source": [
     "### Numpy math\n",
     "\n",
-    "And with these we can easily do math in any direction. axis=0 is down.\n",
-    "\n",
-    "These arrays are especially good for doing things like matrix math (linear algebra) and image processing!\n",
+    "- With Numpy arrays we can easily do math in any direction. \n",
+    "- They are especially good for doing things like matrix math (linear algebra) and image processing!\n",
     "\n",
     "*Note: Numpy arrays are stored more efficiently than Python lists and allow mathematical operations to be vectorized, which results in significantly higher performance than with looping constructs in Python\n",
     "[[ref]](https://medium.com/@ericvanrees/pandas-series-objects-and-numpy-arrays-15dfe05919d7)*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### axis=0 is down\n",
+    "\n",
+    "This notation is horrible, but you'll see it again in Pandas, so you just have to get used to it. (Accessing elements in a 2D array, or a Pandas DataFrame, is always done in the order [row,column], so this is the way I remember down over all the rows is first, and across over all the columns is after...)"
    ]
   },
   {
@@ -440,7 +470,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and axis=1 is across"
+    "#### axis=1 is across"
    ]
   },
   {
@@ -469,7 +499,7 @@
    "source": [
     "### But in a Numpy array all the data has to be the same type\n",
     "\n",
-    "If you try to store mixed types, it has to adjust to a \"lowest common denominator\" data type. Here it reverts to a 21-character unicode string representation \"<U21\", so the numbers are stored as strings instead of integers, so we can't do math on the numbers."
+    "If you try to store mixed types, it has to adjust to a \"lowest common denominator\" data type. In the example below it reverts to a 21-character unicode string representation \"<U21\", so the numbers are stored as strings instead of integers, so we can't do math on the numbers."
    ]
   },
   {
@@ -496,16 +526,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "---\n",
     "\n",
-    "## Dictionary of lists or arrays would be a decent idea for a spreadsheet\n",
+    "## Dictionary of lists (or arrays) would be a decent idea for a spreadsheet\n",
     "\n",
-    "**This is really starting to look more like a spreadsheet because now we have column names, and the columns don't need to be of the same type!** The lists or arrays allow us to do easy math down the columns.\n",
+    "- *Dictionary key acts as a column name*\n",
+    "- *Dictionary value is a list or array holding our rows of values (including Nulls or NaNs)*\n",
     "\n",
-    "- dictionary key is the column name\n",
-    "- dictionary value is a list or array holding our rows of values, including Nulls or NaNs"
+    "**This is really starting to look more like a spreadsheet!** We now have:\n",
+    "- Column names\n",
+    "- Columns don't need to be of the same type!\n",
+    "- Easy math down the columns with the lists or arrays"
    ]
   },
   {
@@ -544,9 +579,11 @@
     "    - deal with non-numeric types\n",
     "- across the rows is can't be done directly in this form\n",
     "- there is nothing to guarantee alignment of the values into rows\n",
-    "    - *if you sort one column, the rest don't get sorted at the same time!*\n",
-    "    - *if you add a new column, you need to be very careful that the rows are in the same order!*\n",
-    "- NaNs (nulls) screw up stats like sum and mean"
+    "    - **if you sort one column, the rest don't get sorted at the same time!**\n",
+    "    - **if you add a new column, you need to be very careful that the rows are in the same order!**\n",
+    "- NaNs (nulls) screw up stats like sum and mean\n",
+    "\n",
+    "Here's an example of trying to take the mean of the columns:"
    ]
   },
   {
@@ -603,7 +640,7 @@
     }
    ],
    "source": [
-    "ind = np.argwhere(dict_of_arrays['name']=='jinyue')[0,0]\n",
+    "ind = np.argwhere( dict_of_arrays['name']=='jinyue' )[0,0]\n",
     "row = [(k, v[ind]) for k,v in dict_of_arrays.items()]\n",
     "row"
    ]
@@ -677,17 +714,17 @@
     "\n",
     "### Pandas Data Structures [[ref]](https://pandas.pydata.org/pandas-docs/stable/getting_started/overview.html)\n",
     "\n",
-    "- **Series**\t1D labeled homogeneously-typed array\n",
+    "- **Series**: 1D labeled homogeneously-typed array\n",
     "    - Container for scalars (numbers), strings, or booleans (True/False)\n",
     "    - Each Series has an Index (names for all entries) and potentially an overall name\n",
     "    - Based on a Numpy array [[ref]](https://medium.com/@ericvanrees/pandas-series-objects-and-numpy-arrays-15dfe05919d7)\n",
-    "- **DataFrame**\tGeneral 2D labeled, size-mutable tabular structure with potentially heterogeneously-typed columns\n",
+    "- **DataFrame**: General 2D labeled, size-mutable tabular structure with potentially heterogeneously-typed columns\n",
     "    - Container for Series\n",
-    "    - Overall Index, and each Series (column) has a name\n",
+    "    - Overall Index (row names), and each Series (column) has a name\n",
     "\n",
     "Printing a DataFrame in a notebook shows the column names/labels along the top, and the \"index\", which are the row labels along the left-hand side (here just sequential integers).\n",
     "\n",
-    "Here we easily initialize/create a new DataFrame using the dictionary of arrays"
+    "Here we easily initialize (create and insert values into) a new DataFrame using the dictionary of arrays"
    ]
   },
   {
@@ -847,10 +884,10 @@
     "- **Columns are each a Series with their own Index**\n",
     "- we can access each element by name so we don't make mistakes with integers\n",
     "- the Index is like a row number in Excel, but more flexible and powerful\n",
-    "- if you don't specify an Index when you create the DataFrame, Pandas will create an integer Index by default\n",
+    "- if you don't specify an Index when you create the DataFrame, Pandas will create a sequential integer Index by default\n",
     "- **the Index can be other types of identifiers like strings or dates**\n",
     "\n",
-    "Let's grab (select) just the column called \"grade\""
+    "Let's grab (select) just the column called \"grade\", which is a Series."
    ]
   },
   {
@@ -917,7 +954,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Columns used to be ignored if there was a TypeError (like trying to take the mean of strings), but now you have to avoid those columns if the aggregation function doesn't make sense with that column\n"
+    "- Columns used to be ignored if there was a TypeError (like trying to take the mean of strings), but now you have to avoid those columns if the aggregation function doesn't make sense with that column. \n",
+    "- It's a little inconvenient, but I can see why they do this so it's more explicit what's happening\n"
    ]
   },
   {
@@ -1520,7 +1558,7 @@
    "source": [
     "## Series and DataFrame indices are automatically aligned\n",
     "\n",
-    "Both rows and columns in Pandas are ordered (unlike dictionaries), and that order doesn't need to be numerical or alphabetical in either the column or row indexes."
+    "**Both rows and columns in Pandas are ordered** (unlike dictionaries), and that order doesn't need to be numerical or alphabetical in either the column or row indexes."
    ]
   },
   {
@@ -1660,7 +1698,10 @@
     "\n",
     "[.dropna() documentation](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.dropna.html)\n",
     "\n",
-    "Many options, including drop any row that has an NA, specify certain columns, or a threshold number of NAs to tolerate.\n",
+    "Many options, including \n",
+    "- drop any row that has an NA\n",
+    "- specify certain columns in which to look for NAs\n",
+    "- a threshold number of NAs to tolerate\n",
     "\n",
     "*Here we're not going to make the change in place, but just see what the DataFrame looks like with the NAs dropped.*"
    ]
