slight wording changes

--- a/BasicPandasPlotting.ipynb
+++ b/BasicPandasPlotting.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Basic plotting with Pandas\n",
     "\n",
-    "Pandas has some built-in methods for plotting, based in the background on Matplotlib, the very powerful grand-daddy of the Python visualization modules.\n",
+    "Pandas has some built-in methods for plotting, based in the background on Matplotlib, the very powerful (and for me, confusing) grand-daddy of the Python visualization modules.\n",
     "\n",
     "**[Pandas chart visualization documentation](https://pandas.pydata.org/pandas-docs/stable/user_guide/visualization.html)**\n",
     "has much more detail and more plot types than we'll cover here.\n",
@@ -318,9 +318,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pandas plots expect data kind of like Excel does!\n",
+    "### Pandas plots expect \"wide\" data kind of like Excel does!\n",
     "\n",
     "Pandas is kind of like Excel for plotting, in that it wants the data in the sort of \"wide\" format our data is in right now, where our X-axis data is in one column, and each series that will go on the Y-axis are in separate columns. \n",
+    "\n",
+    "**This probably means that Pandas expects you to make a Pivot Table out of your data before plotting, just like Excel does!**\n",
     "\n",
     "*I show in other notebooks that packages like Seaborn and Altair want the data in \"tidy\" or \"tall\" format, as do the \"tidyverse\" R packages and some commercial programs like Tableau.*"
    ]
@@ -643,7 +645,7 @@
     "\n",
     "#### It's horrible that figsize is size [across,down]!\n",
     "\n",
-    "This is especially hard for me to remember because many conventions in Pandas are [down,across], like `df.loc[row,column]`."
+    "This is especially hard for me to remember because many conventions in Pandas are [down,across], like `df.loc[row,column]`. It's probably an x,y convention sneaking its way in..."
    ]
   },
   {
