--- a/DataStructures.ipynb
+++ b/DataStructures.ipynb
@@ -887,7 +887,9 @@
     "- if you don't specify an Index when you create the DataFrame, Pandas will create a sequential integer Index by default\n",
     "- **the Index can be other types of identifiers like strings or dates**\n",
     "\n",
-    "Let's grab (select) just the column called \"grade\", which is a Series."
+    "Let's grab (select) just the column called \"grade\", which is a Series.\n",
+    "\n",
+    "**Besides the data access syntax that we'll cover in the next section, this output was always the most confusing thing to me about Pandas. I expected to get just an array of values when I asked for a column or row, and instead I got this weird structure with both labels and values. I didn't understand how helpful the Series was!**"
    ]
   },
   {
