working on pandas 101 review. not done

--- a/AssignmentPandas101Solutions.ipynb
+++ b/AssignmentPandas101Solutions.ipynb
@@ -1714,6 +1714,8 @@
     "\n",
     "Let's practice accessing the values in our DataFrame:\n",
     "\n",
+    "### Selecting a single column\n",
+    "\n",
     "- Display the values from the Engineering column using the `df[]` notation"
    ]
   },
@@ -1784,7 +1786,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Selecting certain columns\n",
+    "### Selecting certain multiple columns\n",
     "\n",
     "- Still use the `df[]` notation, but display just the Engineering and Biology columns, in that order"
    ]
@@ -2099,7 +2101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Use the same notation to select a single column of any DataFram\n",
+    "### Use the same notation to select a single column of any DataFrame\n",
     "\n",
     "- Use the `df.describe()` method from above to get summary statistics on the DataFrame\n",
     "- Again, chain the commands together starting with `df` to produce the transposed DataFrame sorted by the 'mean' column\n",
@@ -2149,6 +2151,8 @@
    "source": [
     "### DataFrame access using the `df.loc[]` notation\n",
     "\n",
+    "The `df.loc[]` notation is very readable since it allows us to state explicitly the names of the rows and columns that we're selecting from the DataFrame.\n",
+    "\n",
     "- Display (select) the Engineering value from the year 2000 using the `df.loc[]` notation"
    ]
   },
@@ -2177,6 +2181,8 @@
    "metadata": {},
    "source": [
     "### Using the slice \":\" notation for selections\n",
+    "\n",
+    "Similar to selecting a range of values from a Python list, the slice `:` notation allows us to select a range from the rows and/or columns of a DataFrame.\n",
     "\n",
     "#### Bounded range\n",
     "\n",
