--- a/AssignmentPandas101Solutions.ipynb
+++ b/AssignmentPandas101Solutions.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Assignment Pandas 101\n",
     "\n",
-    "In this exercise we'll practice our skills from the Pandas 101 workshop, specifically [DataFrameAccess](DataFrameAccess.ipynb) and [BasicPandasPlotting](BasicPandasPlotting.ipynb).\n",
+    "In this exercise we'll practice our skills from the Pandas 101 workshop, specifically [DataFrameAccess](DataFrameAccess.ipynb) and [BasicPandasPlotting](BasicPandasPlotting.ipynb). If you want to review later, feel free to watch [the video of the Spring 2022 Pandas 101 workshop](https://warpwire.duke.edu/w/4-MGAA/).\n",
     "\n",
     "*Don't look at them yet, but the solutions are in \n",
     "[AssignmentPandas101Solutions](AssignmentPandas101Solutions.ipynb)*"
